tests/examples/success/sorts/inference_two_custom.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
sort t

assume exists x. forall y:t. forall z:s. x = y
assume exists x. forall y:t. forall z:s. x = z
